wip: fixing vertical text overflow and horizontal spacing on larger screens

--- a/public/styles.css
+++ b/public/styles.css
@@ -3,8 +3,10 @@
     grid-template-columns: repeat(3, 1fr);
     gap: 10px;
     padding: 10px;
+    align-content: center;
 }
 
+/* START #indexquote hover effects */
 #indexquote {
     transition: 0.3s;
 }
@@ -20,15 +22,17 @@
     box-shadow: 1px 1px 0 rgba(0,0,0,.25);;
     overflow: hidden;
     text-overflow: ellipsis;
-    max-width: 400px;
-    max-height: 120px;
+    max-width: 100%;
+    max-height: 75%;
     /* TODO: Fix issue where text overflows vertically past the View button*/
 }
 
 #indexquote:hover {
     box-shadow: 4px 4px 0 rgba(0,0,0,.25);;
 }
+/* END #indexquote hover effects */
 
+/* START #indexbutton hover effects */
 #indexbutton {
     transition: 0.3s;
 }
@@ -47,11 +51,13 @@
 #indexbutton:hover {
     opacity: 0.7;
 }
+/* END #indexquote hover effects */
 
 .showform {
     display: inline-block;
 }
 
+/* START .button hover effects */
 .button {
     transition: 0.3s;
 }
@@ -68,13 +74,13 @@
 .button:hover {
     opacity: 0.7;
 }
+/* END .button hover effects */
 
 .wrapper {
     padding-top: 5px;
     padding-bottom: 20px;
     border: 1px solid black;
     margin: 10px;
-    padding-left: -50px;
     border-radius: 25px;
     background-color: #f5f4f4;
 }
@@ -109,10 +115,6 @@ nav a {
     margin-right: 40px;
 }
 
-textarea {
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-input {
+textarea, input {
     font-family: Arial, Helvetica, sans-serif;
 }
